--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 argparse==1.1
-Sphinx==1.2
+Jinja2==2.7.2
+MarkupSafe==0.23
+Pygments==1.6
+Sphinx==1.2.2
 coverage==3.7.1
 docutils==0.11
-ipython==1.1.0
-nose==1.3.0
+ipython==2.1.0
+nose==1.3.3
+py==1.4.20
+pyreadline==2.0
 tox==1.7.1
-virtualenv==1.11.4
+virtualenv==1.11.6
